<resources>
    <string name="app_name">Covid-19 Gaurd</string>
    <string name="gaurd">gaurd</string>
    <string name="coronaabout">coronaabout</string>
    <string name="about_coronavirus">About Coronavirus</string>
    <string name="immunityhome">immunityhome</string>
    <string name="boostimmunity">bost</string>
    <string name="boost_immunity">Boost Immunity</string>
    <string name="yogahome">yogahhome</string>
    <string name="boost_immunity_by_yoga">Boost Immunity By Yoga</string>
    <string name="remediess">remediess</string>
    <string name="ayurvedic_remedies">Ayurvedic Remedies</string>
    <string name="newshome">newshome</string>
    <string name="News">newsh</string>
    <string name="news">News</string>
    <string name="facemaskhome">facemaskhome</string>
    <string name="homemade_mask">Homemade Mask</string>
    <string name="modi">modi</string>
    <string name="symptoms">symp</string>
    <string name="causes">causes</string>
    <string name="risks">risks</string>
    <string name="credentals">cred</string>
    <string name="herbs">herbs</string>
    <string name="adrak">adrak</string>
    <string name="amla">amla</string>
    <string name="tulsi">tulsi</string>
    <string name="baba">baba</string>
    <string name="watch_video_1">Watch video 1</string>
    <string name="fittak">fittk</string>
    <string name="watch_video_2">Watch Video 2</string>
    <string name="yoga3">yoga3</string>
    <string name="watch_video_3">watch video 3</string>
    <string name="ashwagandha">ashwa</string>
    <string name="buy_ashvagandha">Buy Ashvagandha</string>
    <string name="guduchi">guduchi</string>
    <string name="blnk">blnk</string>
    <string name="amlki">amlki</string>
    <string name="buy_amalaki">amalaki</string>
    <string name="shaavai">sha</string>
    <string name="buy_shatavari">shatavari</string>
    <string name="suved">suved</string>
    <string name="buy_suveda">suveda</string>
    <string name="blnk2">blnk2</string>
    <string name="newss">newss</string>
    <string name="live_news">Live News</string>
    <string name="tracker">tracker</string>
    <string name="corona_tracker">Corona tracker</string>
    <string name="makss">maskk</string>
    <string name="watch_video">Watch Video</string>
    <string name="buy_guduchi">buy guduchi</string>
    <string name="YourGaurd">ggg</string>
    <string name="Your_Gaurd">Covid 19 Gaurd</string>

</resources>