<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyremediesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ashwagandha"
                app:srcCompat="@drawable/ashwagandha" />

            <Button
                android:id="@+id/ashvabtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browser1"
                android:text="@string/buy_ashvagandha"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/guduchi"
                app:srcCompat="@drawable/guduchi" />

            <Button
                android:id="@+id/guduchibtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browser2"
                android:text="@string/buy_guduchi"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/blnk"
                app:srcCompat="@drawable/blank" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/amlki"
                app:srcCompat="@drawable/amlaki" />

            <Button
                android:id="@+id/amalakibtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browser3"
                android:text="@string/buy_amalaki"
                android:textSize="20sp"
                tools:text="Buy Amalaki" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/shaavai"
                app:srcCompat="@drawable/shatavari" />

            <Button
                android:id="@+id/shavaribtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browser4"
                android:text="@string/buy_shatavari"
                android:textSize="20sp"
                tools:text="Buy Shatavari" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/suved"
                app:srcCompat="@drawable/suveda" />

            <Button
                android:id="@+id/suvedabtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browser5"
                android:text="@string/buy_suveda"
                android:textSize="20sp"
                tools:text="Buy Suveda" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>