<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boost_immunity_by_yoga"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gaurd"
                app:srcCompat="@drawable/shield" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/coronaabout"
                app:srcCompat="@drawable/coronaabout" />

            <Button
                android:id="@+id/aboutcorona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:contentDescription="@string/about_coronavirus"
                android:text="@string/about_coronavirus"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_corona_info_24"
                android:drawableStart="@drawable/ic_corona_info_24" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/blnk2"
                app:srcCompat="@drawable/blank" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/immunityhome"
                app:srcCompat="@drawable/boostimmunityhomw" />

            <Button
                android:id="@+id/boosthomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:contentDescription="@string/boostimmunity"
                android:text="@string/boost_immunity"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/blnk2"
                app:srcCompat="@drawable/blank" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/yogahome"
                app:srcCompat="@drawable/yogahome" />

            <Button
                android:id="@+id/yogahomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:text="@string/boost_immunity_by_yoga"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/blnk2"
                app:srcCompat="@drawable/blank" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/remediess"
                app:srcCompat="@drawable/rremedies" />

            <Button
                android:id="@+id/remedieshomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:text="@string/ayurvedic_remedies"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/blnk2"
                app:srcCompat="@drawable/blank" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/newshome"
                app:srcCompat="@drawable/livenews" />

            <Button
                android:id="@+id/newsId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:contentDescription="@string/News"
                android:text="@string/news"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/facemaskhome"
                app:srcCompat="@drawable/facemaskhome" />

            <Button
                android:id="@+id/facemaskhomeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:onClick="onClick"
                android:text="@string/homemade_mask"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/modi"
                app:srcCompat="@drawable/modii" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>