<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yogaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/baba"
                app:srcCompat="@drawable/ramdevbaba" />

            <Button
                android:id="@+id/babavidId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickyoga"
                android:background="#FFD600"
                android:text="@string/watch_video_1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/fittak"
                app:srcCompat="@drawable/fittakk" />

            <Button
                android:id="@+id/fittakvidId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFD600"
                android:onClick="onClickyoga"
                android:text="@string/watch_video_2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/yoga3"
                app:srcCompat="@drawable/sixposess" />

            <Button
                android:id="@+id/sixposeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFD600"
                android:onClick="onClickyoga"
                android:text="@string/watch_video_3"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>